--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
         "type": "none"
     },
     "dependencies": {
-        "async": "^2.0.1",
-        "buffalo": "^0.1.3",
-        "random-access-file": "^1.3.0"
-      }
+    "amqplib": "^0.4.2",
+    "async": "^2.0.1",
+    "body-parser": "^1.15.2",
+    "bson": "^0.5.6",
+    "buffalo": "^0.1.3",
+    "dateformat": "^1.0.12",
+    "express": "^4.14.0",
+    "query-string": "^4.2.3",
+    "random-access-file": "^1.3.0"
+  }
 }
