--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "node-bigstream",
-    "description": "",
-    "version": "0.0.1",
-    "main": "./bigstream.js",
-    "author": {
-        "name": "Kamron Aroonrua",
-        "email": "kamron.aroonrua@nectec.or.th"
-    },
-    "keywords": [],
-    "licenses": {
-        "type": "none"
-    },
-    "dependencies": {
+  "name": "node-bigstream",
+  "description": "",
+  "version": "0.0.1",
+  "main": "./bigstream.js",
+  "author": {
+    "name": "Kamron Aroonrua",
+    "email": "kamron.aroonrua@nectec.or.th"
+  },
+  "keywords": [],
+  "licenses": {
+    "type": "none"
+  },
+  "dependencies": {
     "amqplib": "^0.4.2",
     "async": "^2.0.1",
     "body-parser": "^1.15.2",
@@ -19,6 +19,7 @@
     "buffalo": "^0.1.3",
     "dateformat": "^1.0.12",
     "express": "^4.14.0",
+    "node-persist": "^2.0.7",
     "query-string": "^4.2.3",
     "random-access-file": "^1.3.0"
   }
