--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dateformat": "^1.0.12",
     "express": "^4.14.0",
     "node-persist": "^2.0.7",
+    "node-schedule": "^1.2.0",
     "query-string": "^4.2.3",
-    "random-access-file": "^1.3.0"
+    "random-access-file": "^1.3.0",
+    "request": "^2.79.0"
   }
 }
