--- a/node-bigstream/package.json
+++ b/node-bigstream/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.0",
     "node-persist": "^2.0.7",
     "node-schedule": "^1.2.0",
+    "node-uuid": "^1.4.7",
     "query-string": "^4.2.3",
     "random-access-file": "^1.3.0",
     "request": "^2.79.0"
