--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "buffalo": "^0.1.3",
     "dateformat": "^1.0.12",
     "express": "^4.14.0",
+    "ioredis": "^2.5.0",
     "node-persist": "^2.0.7",
     "node-schedule": "^1.2.0",
     "node-uuid": "^1.4.7",
