--- a/node-bigstream/package.json
+++ b/node-bigstream/package.json
@@ -24,6 +24,7 @@
     "node-schedule": "^1.2.0",
     "node-uuid": "^1.4.7",
     "query-string": "^4.2.3",
+    "quickq": "^0.8.1",
     "random-access-file": "^1.3.0",
     "request": "^2.79.0"
   }
