--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dateformat": "^1.0.12",
     "express": "^4.14.0",
     "ioredis": "^2.5.0",
+    "moment": "^2.17.1",
     "node-persist": "^2.0.7",
     "node-schedule": "^1.2.0",
     "node-uuid": "^1.4.7",
