--- a/node-bigstream/package.json
+++ b/node-bigstream/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "amqplib": "^0.4.2",
     "async": "^2.0.1",
+    "axon": "^2.0.3",
     "body-parser": "^1.15.2",
     "bson": "^0.5.6",
     "buffalo": "^0.1.3",
