--- a/node-bigstream/package.json
+++ b/node-bigstream/package.json
@@ -29,6 +29,7 @@
     "query-string": "^4.2.3",
     "quickq": "^0.8.1",
     "random-access-file": "^1.3.0",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "thunky": "^1.0.2"
   }
 }
