--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dateformat": "^1.0.12",
     "express": "^4.14.0",
     "ioredis": "^2.5.0",
+    "minimist": "^1.2.0",
     "moment": "^2.17.1",
     "node-persist": "^2.0.7",
     "node-schedule": "^1.2.0",
@@ -31,6 +32,7 @@
     "random-access-file": "^1.3.0",
     "redis": "^2.6.5",
     "request": "^2.79.0",
-    "thunky": "^1.0.2"
+    "thunky": "^1.0.2",
+    "tiny-worker": "^2.1.1"
   }
 }
