--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-persist": "^2.0.7",
     "node-schedule": "^1.2.0",
     "node-uuid": "^1.4.7",
+    "object-hash": "^1.1.8",
     "pm2": "^2.4.0",
     "query-string": "^4.2.3",
     "quickq": "^0.8.1",
