--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ioredis": "^2.5.0",
     "minimist": "^1.2.0",
     "moment": "^2.17.1",
+    "node-gyp": "^3.6.2",
     "node-persist": "^2.0.7",
     "node-schedule": "^1.2.0",
     "node-uuid": "^1.4.7",
