--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-jwt": "^5.3.1",
     "ioredis": "^2.5.0",
     "jsonwebtoken": "^8.2.2",
+    "microgear": "^0.8.1",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.0",
     "moment": "^2.17.1",
