--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "minimatch": "^3.0.4",
     "minimist": "^1.2.0",
     "moment": "^2.17.1",
+    "mqtt": "^3.0.0",
     "node-gyp": "^3.6.2",
     "node-persist": "^2.0.7",
     "node-schedule": "^1.2.0",
