--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "bson": "^0.5.6",
     "buffalo": "^0.1.3",
     "dateformat": "^1.0.12",
+    "dot-object": "^1.9.0",
     "express": "^4.14.0",
     "express-jwt": "^5.3.1",
     "ioredis": "^2.5.0",
     "jsonwebtoken": "^8.2.2",
-    "microgear": "^0.8.1",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.0",
     "moment": "^2.17.1",
@@ -34,6 +34,7 @@
     "node-uuid": "^1.4.7",
     "object-hash": "^1.1.8",
     "pm2": "^2.4.0",
+    "qs": "^6.8.0",
     "query-string": "^4.2.3",
     "quickq": "^0.8.1",
     "random-access-file": "^1.3.0",
