--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "bson": "^0.5.6",
     "buffalo": "^0.1.3",
     "dateformat": "^1.0.12",
-    "dot-object": "^1.9.0",
+    "dot-prop": "^5.1.0",
     "express": "^4.14.0",
     "express-jwt": "^5.3.1",
     "ioredis": "^2.5.0",
