--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
      - "BS_SECRET=${BS_SECRET}"
     volumes:
-     - ${VOLUME}/bigstream/data:/var/bigstream/data
+     - bsdata:/var/bigstream/data
   redis:
     image: "redis:${REDIS_TAG}"
     command: redis-server --appendonly yes
@@ -28,7 +28,7 @@ services:
     ports:
      - "6379:6379"
     volumes:
-     - ${VOLUME}/redis/data:/data
+     - bsredis:/data
   rabbitmq:
     image: "igridproject/rabbitmq"
     command: rabbitmq-server --hostname rabbitmq-server
@@ -40,6 +40,9 @@ services:
              - rabbitmq-server
     ports:
      - "5672:5672"
+volumes:
+  bsdata:
+  bsredis:
 networks:
   bsnet:
      driver: bridge
