--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "minimist": "^1.2.0",
     "moment": "^2.17.1",
     "mqtt": "^3.0.0",
+    "node-cache": "^5.1.2",
     "node-gyp": "^3.6.2",
     "node-persist": "^2.0.7",
     "node-schedule": "^1.2.0",
