--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
   bigstream:
-    image: "bigstream:${BIGSTREAM_TAG}"
-    build: ./
+    image: "${BIGSTREAM_IMG}"
     container_name: bs_bigstream
     restart: always
     networks:
